more voice commands

--- a/parotid_10.csproj
+++ b/parotid_10.csproj
@@ -219,11 +219,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\all_vis_on.cs" />
     <Compile Include="Assets\Scripts\move.cs" />
     <Compile Include="Assets\Scripts\resize.cs" />
     <Compile Include="Assets\Scripts\rotate.cs" />
     <Compile Include="Assets\Scripts\toggle_rotate.cs" />
     <Compile Include="Assets\Scripts\toggle_vis.cs" />
+    <Compile Include="Assets\Scripts\toggle_vis_all.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
